tests/baselines/reference/stringLiteralTypesInImplementationSignatures2.errors.txt
==== tests/cases/compiler/stringLiteralTypesInImplementationSignatures2.ts (13 errors) ====
    // String literal types are only valid in overload signatures
    
    function foo(x: any);
    function foo(x: 'hi') { }
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
    
    class C {
        foo(x: string);
        foo(x: 'hi') { }
        ~~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
    }
    
    interface I {
        (x: 'a');
        ~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        (x: 'hi');
        ~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        foo(x: 'a', y: 'a');
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        foo(x: 'hi', y: 'hi');
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    }
    
    var a: {
        (x: 'hi');
        ~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        (x: 'a');
        ~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        foo(x: 'hi');
        ~~~~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        foo(x: 'a');
        ~~~~~~~~~~~
!!! error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    }
    
    var b = {
        foo(x: 'hi') { },
        ~~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
        foo(x: 'a') { },
        ~~~~~~~~~~~~~~~
!!! error TS2000: Duplicate identifier 'foo'.
        ~~~~~~~~~~~~~~~
!!! error TS2163: Overload signature implementation cannot use specialized type.
    }
    